# libnotify

./: AUTHORS  Makefile.am  autogen.sh  configure.ac  libnotify-uninstalled.pc.in
docs/reference/: libnotify-docs.sgml
libnotify/: Makefile.am  internal.h  notification.c  notification.h  notify.c  notify.h
tests/: Makefile.am  test-arabic.c  test-image.c  test-server-info.c
